--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -21,39 +21,39 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qk2-eO-scz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="HZ5-5j-Yyq">
-                                        <rect key="frame" x="94" y="8" width="200" height="782"/>
+                                    <stackView opaque="NO" contentMode="center" misplaced="YES" axis="vertical" distribution="equalSpacing" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="HZ5-5j-Yyq">
+                                        <rect key="frame" x="111" y="15" width="200" height="782"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Full Name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Gi-zY-2Cx">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Gi-zY-2Cx">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="200" id="PHO-gV-DfM"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="CPF" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G0M-Yc-XCc">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G0M-Yc-XCc">
                                                 <rect key="frame" x="0.0" y="94" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLx-gp-gYQ">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLx-gp-gYQ">
                                                 <rect key="frame" x="0.0" y="188" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncu-d8-SIe">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncu-d8-SIe">
                                                 <rect key="frame" x="0.0" y="282" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" textContentType="new-password"/>
+                                                <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password Confirmation" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VNV-sb-zoL">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VNV-sb-zoL">
                                                 <rect key="frame" x="0.0" y="376" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -77,7 +77,10 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mes-GX-qq1">
                                                 <rect key="frame" x="0.0" y="752" width="200" height="30"/>
-                                                <state key="normal" title="Registrar"/>
+                                                <color key="backgroundColor" red="1" green="0.68118776889999999" blue="0.075253616950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <state key="normal" title="Registrar">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="register:" destination="JIO-IA-uMF" eventType="touchUpInside" id="F8W-lB-U0k"/>
                                                 </connections>
@@ -89,6 +92,7 @@
                                         </constraints>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="HZ5-5j-Yyq" firstAttribute="leading" secondItem="Qk2-eO-scz" secondAttribute="leading" constant="10" id="1Wf-v4-kv0"/>
                                     <constraint firstAttribute="bottom" secondItem="HZ5-5j-Yyq" secondAttribute="bottom" id="V3X-w2-Ptg"/>
@@ -128,25 +132,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalSpacing" alignment="center" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="gaO-y1-KqK">
-                                <rect key="frame" x="0.0" y="114" width="375" height="448"/>
+                                <rect key="frame" x="0.0" y="114" width="375" height="482"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slot1" translatesAutoresizingMaskIntoConstraints="NO" id="G9z-LE-reh">
-                                        <rect key="frame" x="104.5" y="0.0" width="166" height="166"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="G9z-LE-reh">
+                                        <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="3wZ-BF-caR"/>
+                                            <constraint firstAttribute="width" constant="200" id="gLR-o1-ZDr"/>
+                                        </constraints>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7c6-Yr-hsk">
-                                        <rect key="frame" x="50" y="204" width="275" height="30"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="50" y="238" width="275" height="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n3m-QX-SeD">
-                                        <rect key="frame" x="50" y="272" width="275" height="30"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="50" y="306" width="275" height="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09q-4a-2g7">
-                                        <rect key="frame" x="50" y="340" width="275" height="40"/>
+                                        <rect key="frame" x="50" y="374" width="275" height="40"/>
                                         <color key="backgroundColor" red="1" green="0.68118776889999999" blue="0.075253616950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="YeA-H6-MSO"/>
@@ -159,7 +167,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dcS-Kf-Iat">
-                                        <rect key="frame" x="156.5" y="418" width="62" height="30"/>
+                                        <rect key="frame" x="156.5" y="452" width="62" height="30"/>
                                         <state key="normal" title="Registrar">
                                             <color key="titleColor" red="1" green="0.68118776889999999" blue="0.075253616950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
@@ -950,9 +958,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="0rd-61-yOX" kind="relationship" relationship="viewControllers" id="5c3-7b-29u"/>
                         <segue destination="YZg-he-xzj" kind="relationship" relationship="viewControllers" id="zMp-yw-jYp"/>
                         <segue destination="WLx-nM-aHa" kind="relationship" relationship="viewControllers" id="nvB-Q3-bXs"/>
-                        <segue destination="0rd-61-yOX" kind="relationship" relationship="viewControllers" id="5c3-7b-29u"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2G-Gu-3DI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -963,7 +971,7 @@
         <scene sceneID="tOY-QF-DVl">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YZg-he-xzj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Ver Lotes" id="eb5-GZ-E4O"/>
+                    <tabBarItem key="tabBarItem" title="Ver Lotes" image="storage" selectedImage="storage" id="eb5-GZ-E4O"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zVR-YC-XcY">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -982,7 +990,7 @@
         <scene sceneID="HEe-Tq-GhK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WLx-nM-aHa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Configurações" id="6ob-hE-cUy"/>
+                    <tabBarItem key="tabBarItem" title="Configurações" image="settings" selectedImage="settings" id="6ob-hE-cUy"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qHA-4f-eCr">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1055,7 +1063,7 @@
                             <outlet property="delegate" destination="0rd-61-yOX" id="U6Z-MS-Hk4"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Meus Pedidos" id="AK7-x6-3dI"/>
+                    <tabBarItem key="tabBarItem" title="Meus Pedidos" image="shopping-cart" selectedImage="shopping-cart" id="AK7-x6-3dI"/>
                     <navigationItem key="navigationItem" id="nWM-BN-uXF"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TUI-OH-288" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1064,7 +1072,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="slot1" width="166" height="166"/>
+        <image name="icon.png" width="512" height="512"/>
+        <image name="settings" width="18" height="18"/>
+        <image name="shopping-cart" width="18" height="18"/>
+        <image name="storage" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="JVz-ro-u23"/>
