--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="JIO-IA-uMF" customClass="RegistrationViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k2h-RH-ZBq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qk2-eO-scz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="Qk2-eO-scz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="1180"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="center" misplaced="YES" axis="vertical" distribution="equalSpacing" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="HZ5-5j-Yyq">
-                                        <rect key="frame" x="111" y="15" width="200" height="782"/>
+                                    <stackView opaque="NO" contentMode="center" axis="vertical" distribution="fillEqually" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="HZ5-5j-Yyq">
+                                        <rect key="frame" x="57" y="10" width="200" height="1064"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Gi-zY-2Cx">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
@@ -33,11 +33,14 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G0M-Yc-XCc">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G0M-Yc-XCc" customClass="SwiftMaskField" customModule="SwiftMaskText">
                                                 <rect key="frame" x="0.0" y="94" width="200" height="30"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="maskString" value="NNN.NNN.NNN-NN"/>
+                                                </userDefinedRuntimeAttributes>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLx-gp-gYQ">
                                                 <rect key="frame" x="0.0" y="188" width="200" height="30"/>
@@ -49,34 +52,49 @@
                                                 <rect key="frame" x="0.0" y="282" width="200" height="30"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VNV-sb-zoL">
                                                 <rect key="frame" x="0.0" y="376" width="200" height="30"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Outra coisa" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l51-ju-wdm">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qd8-5n-McR" customClass="SwiftMaskField" customModule="SwiftMaskText">
                                                 <rect key="frame" x="0.0" y="470" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="maskString" value="NNNNN-NNN"/>
+                                                </userDefinedRuntimeAttributes>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Outra coisa" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y23-rQ-VIj">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zBU-yP-53e">
                                                 <rect key="frame" x="0.0" y="564" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Outra coisa" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZFS-vu-dhp">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gOF-sc-YfG">
                                                 <rect key="frame" x="0.0" y="658" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JRT-Kx-8iH">
+                                                <rect key="frame" x="0.0" y="752" width="200" height="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X6H-bQ-y9k">
+                                                <rect key="frame" x="0.0" y="846" width="200" height="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mes-GX-qq1">
-                                                <rect key="frame" x="0.0" y="752" width="200" height="30"/>
+                                                <rect key="frame" x="0.0" y="940" width="200" height="30"/>
                                                 <color key="backgroundColor" red="1" green="0.68118776889999999" blue="0.075253616950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <state key="normal" title="Registrar">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -85,19 +103,22 @@
                                                     <action selector="register:" destination="JIO-IA-uMF" eventType="touchUpInside" id="F8W-lB-U0k"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1m1-3a-4ha">
+                                                <rect key="frame" x="0.0" y="1034" width="200" height="30"/>
+                                                <state key="normal" title="Realizar Login"/>
+                                                <connections>
+                                                    <segue destination="BYZ-38-t0r" kind="show" id="FKs-Oy-mdI"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="2Gi-zY-2Cx" secondAttribute="trailing" id="ajK-u6-UyJ"/>
-                                            <constraint firstItem="2Gi-zY-2Cx" firstAttribute="leading" secondItem="HZ5-5j-Yyq" secondAttribute="leading" id="wbF-cI-zaE"/>
-                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="HZ5-5j-Yyq" firstAttribute="leading" secondItem="Qk2-eO-scz" secondAttribute="leading" constant="10" id="1Wf-v4-kv0"/>
-                                    <constraint firstAttribute="bottom" secondItem="HZ5-5j-Yyq" secondAttribute="bottom" id="V3X-w2-Ptg"/>
-                                    <constraint firstAttribute="trailing" secondItem="HZ5-5j-Yyq" secondAttribute="trailing" constant="10" id="anw-Az-TAp"/>
-                                    <constraint firstItem="HZ5-5j-Yyq" firstAttribute="top" secondItem="Qk2-eO-scz" secondAttribute="top" id="deg-aQ-Ha0"/>
+                                    <constraint firstAttribute="trailing" secondItem="HZ5-5j-Yyq" secondAttribute="trailing" constant="57" id="ESq-pY-Dmi"/>
+                                    <constraint firstItem="HZ5-5j-Yyq" firstAttribute="leading" secondItem="Qk2-eO-scz" secondAttribute="leading" constant="57" id="Ll8-KW-I66"/>
+                                    <constraint firstAttribute="bottom" secondItem="HZ5-5j-Yyq" secondAttribute="bottom" constant="10" id="MQW-zd-hf8"/>
+                                    <constraint firstItem="HZ5-5j-Yyq" firstAttribute="top" secondItem="Qk2-eO-scz" secondAttribute="top" constant="10" id="uIA-iM-Xij"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -110,18 +131,24 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="549-bR-mIe"/>
                     </view>
+                    <size key="freeformSize" width="375" height="1200"/>
                     <connections>
+                        <outlet property="additional" destination="X6H-bQ-y9k" id="xDq-oR-NWg"/>
+                        <outlet property="address" destination="zBU-yP-53e" id="xD0-Gs-ak2"/>
+                        <outlet property="cep" destination="qd8-5n-McR" id="Klc-me-wWg"/>
+                        <outlet property="city" destination="gOF-sc-YfG" id="vLm-cn-5go"/>
                         <outlet property="cpf" destination="G0M-Yc-XCc" id="u3T-gQ-9uV"/>
                         <outlet property="email" destination="jLx-gp-gYQ" id="pPr-D9-JpU"/>
                         <outlet property="password" destination="ncu-d8-SIe" id="8kJ-f9-7Lz"/>
                         <outlet property="passwordConfirmation" destination="VNV-sb-zoL" id="7Dy-ij-5HG"/>
                         <outlet property="registerButton" destination="Mes-GX-qq1" id="9cQ-a3-Cyn"/>
+                        <outlet property="state" destination="JRT-Kx-8iH" id="D9O-Xp-fWu"/>
                         <outlet property="username" destination="2Gi-zY-2Cx" id="Yva-gZ-pNj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VlS-Fs-m2U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-162.40000000000001" y="-821.73913043478262"/>
+            <point key="canvasLocation" x="-140" y="-1077"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -132,7 +159,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalSpacing" alignment="center" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="gaO-y1-KqK">
-                                <rect key="frame" x="0.0" y="114" width="375" height="482"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="482"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="G9z-LE-reh">
                                         <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
@@ -206,7 +233,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-172" y="-110.19490254872565"/>
+            <point key="canvasLocation" x="-214" y="-133"/>
         </scene>
         <!--Realizadas-->
         <scene sceneID="OjM-rC-3LG">
@@ -1084,5 +1111,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="JVz-ro-u23"/>
+        <segue reference="FKs-Oy-mdI"/>
     </inferredMetricsTieBreakers>
 </document>
